force-app/main/default/objects/Work_Authorization__c/Work_Authorization__c.object-meta.xml
<CustomObject>
    <description>Work Authorizations is an object containing records related to those authorizations required by outside parties. It is used to track the Locate and Permit Process.  As an authorization may be related to many pieces of work there is al</description>
    <label>Work Authorization</label>
    <nameField>
        <displayFormat>WA-{00000}</displayFormat>
        <label>Work Authorization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>