force-app/main/default/objects/Work_Authorization__c/fields/Authority_Having_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Authority_Having_Jurisdiction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>28043</description>
    <inlineHelpText>The related Authority responsible for the Permit</inlineHelpText>
    <label>Authority Having Jurisdiction</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Permit Authority Having Jurisdiction account must have the correct Type</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Authority Having Jurisdiction</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Authorizations</relationshipLabel>
    <relationshipName>Work_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>