force-app/main/default/objects/Work_Authorization__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>29277</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>