force-app/main/default/objects/Work_Authorization__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <description>29277 Original field</description>
    <inlineHelpText>Text field to share additional Contact Information that might be helpful.</inlineHelpText>
    <label>Contact Information</label>
    <type>TextArea</type>
</CustomField>