force-app/main/default/objects/Work_Authorization__c/fields/Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason__c</fullName>
    <description>30970: To capture delay type</description>
    <inlineHelpText>When Locate is updated the user is prompted to provide a reason for the delay</inlineHelpText>
    <label>Delay Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Delay</fullName>
            </value>
            <value>
                <fullName>Weather Delay</fullName>
            </value>
            <value>
                <fullName>Internal Delay</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>