force-app/main/default/objects/Work_Authorization__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>29277 Original list of fields</description>
    <inlineHelpText>Date of expiration</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>