force-app/main/default/objects/Work_Authorization__c/fields/Expiration_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Indicator__c</fullName>
    <description>#28046 and Bug #30975</description>
    <formula>IF(  
OR(ISPICKVAL( Status__c ,&apos;Canceled&apos;),
AND(Updated_Locate__c, Expiration_Date__c - TODAY() &lt; 0 )
),IMAGE(&quot;/resource/Locate_Grey&quot;, &quot;Locate Grey&quot;, 15, 15),

IF(AND( RecordType.DeveloperName = &apos;Locate&apos;,
Expiration_Date__c  - TODAY() &gt; 3),IMAGE(&quot;/resource/Locate_Green&quot;, &quot;Locate Green&quot;, 15, 15),

IF(AND(RecordType.DeveloperName = &apos;Locate&apos;,Expiration_Date__c - TODAY() &lt;= 3,Expiration_Date__c - TODAY() &gt; 0),IMAGE(&quot;/resource/Locate_Yellow&quot;, &quot;Locate Yellow&quot;, 15, 15),

IF(AND( RecordType.DeveloperName = &apos;Permit&apos;,
Expiration_Date__c  - TODAY() &gt; Authority_Having_Jurisdiction__r.Permit_Turnaround_Time__c ),IMAGE(&quot;/resource/Locate_Green&quot;, &quot;Locate Green&quot;, 15, 15),

IF(AND( RecordType.DeveloperName = &apos;Permit&apos;, 
Expiration_Date__c - TODAY() &lt;= Authority_Having_Jurisdiction__r.Permit_Turnaround_Time__c , Expiration_Date__c - TODAY() &gt; 0),IMAGE(&quot;/resource/Locate_Yellow&quot;, &quot;Locate Yellow&quot;, 15, 15),

IF(Expiration_Date__c - TODAY() &lt;= 0,IMAGE(&quot;/resource/Locate_Red&quot;, &quot;Locate Red&quot;, 15,15),
&quot; &quot;
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Indicator</label>
    <type>Text</type>
</CustomField>