force-app/main/default/objects/Work_Authorization__c/fields/Formatted_Address__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Address__c</fullName>
    <description>29636 &amp; 45294</description>
    <formula>Primary_Address__r.Formatted_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Address</label>
    <type>Text</type>
</CustomField>