force-app/main/default/objects/Work_Authorization__c/fields/Is_Locate_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Locate_Required__c</fullName>
    <description>28043 used to identify if the permit approval will require a locate to be completed</description>
    <inlineHelpText>Identifies if the permit approval will require a locate to be completed</inlineHelpText>
    <label>Is Locate Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>