force-app/main/default/objects/Work_Authorization__c/fields/Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date__c</fullName>
    <description>28043</description>
    <inlineHelpText>Date of Issue</inlineHelpText>
    <label>Issued Date</label>
    <type>Date</type>
</CustomField>