force-app/main/default/objects/Work_Authorization__c/fields/Link_to_Locate__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Locate__c</fullName>
    <description>29277 Original field. URL to work as hyperlink to open record on the 811 site
45528: update help text</description>
    <inlineHelpText>Link to specific locate ticket</inlineHelpText>
    <label>Link to Locate</label>
    <type>Url</type>
</CustomField>