force-app/main/default/objects/Work_Authorization__c/fields/Other_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Delay_Reason__c</fullName>
    <description>30970: To capture Delay Reason of type Other</description>
    <inlineHelpText>When Locate is updated the user is prompted to provide a reason for the delay and they select Other this value is required</inlineHelpText>
    <label>Other Delay Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>