force-app/main/default/objects/Work_Authorization__c/fields/Other_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Type__c</fullName>
    <description>28043</description>
    <inlineHelpText>Enter the type of Permit when Other is selected</inlineHelpText>
    <label>Other Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>