force-app/main/default/objects/Work_Authorization__c/fields/Permit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Permit_Fee__c</fullName>
    <description>28043</description>
    <inlineHelpText>Cost of the Permit</inlineHelpText>
    <label>Permit Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>