force-app/main/default/objects/Work_Authorization__c/fields/Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Permit_Number__c</fullName>
    <description>29277</description>
    <label>Permit Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>