force-app/main/default/objects/Work_Authorization__c/fields/Previous_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Ticket_Number__c</fullName>
    <description>29277</description>
    <formula>Previous_Work_Authorization__r.Ticket_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ticket Number from Previous Work Authorization</inlineHelpText>
    <label>Previous Ticket Number</label>
    <type>Text</type>
</CustomField>