force-app/main/default/objects/Work_Authorization__c/fields/Previous_Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Previous_Work_Authorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>29277</description>
    <inlineHelpText>Previous Work Authorization record which may have expired</inlineHelpText>
    <label>Previous Work Authorization</label>
    <referenceTo>Work_Authorization__c</referenceTo>
    <relationshipLabel>Work Authorizations</relationshipLabel>
    <relationshipName>Work_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>