force-app/main/default/objects/Work_Authorization__c/fields/Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Primary Address related to the Work Authorization</inlineHelpText>
    <label>Primary Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Work Authorizations</relationshipLabel>
    <relationshipName>Work_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>