force-app/main/default/objects/Work_Authorization__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>28043</description>
    <inlineHelpText>Optional reference number not the Permit Number (e.g., request Reference Number)</inlineHelpText>
    <label>Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>