force-app/main/default/objects/Work_Authorization__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>29277 Original setup</description>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>