force-app/main/default/objects/Work_Authorization__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>28043</description>
    <inlineHelpText>From Permit</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>