force-app/main/default/objects/Work_Authorization__c/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sub Project</label>
    <referenceTo>Sub_Project__c</referenceTo>
    <relationshipLabel>Work Authorizations</relationshipLabel>
    <relationshipName>Work_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>