force-app/main/default/objects/Work_Authorization__c/fields/Sub_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project_Status__c</fullName>
    <description>29277</description>
    <formula>TEXT( Sub_Project__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of the related Sub Project</inlineHelpText>
    <label>Sub Project Status</label>
    <type>Text</type>
</CustomField>