force-app/main/default/objects/Work_Authorization__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <description>29277 Original Ticket Number</description>
    <label>Ticket Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>