force-app/main/default/objects/Work_Authorization__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>29277 Original field.</description>
    <inlineHelpText>Type of Permit required. For Locate records this field value is hidden and defaulted to be &quot;Locate&quot;</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Excavation</fullName>
            </value>
            <value>
                <fullName>Hard Surface</fullName>
            </value>
            <value>
                <fullName>Locate</fullName>
            </value>
            <value>
                <fullName>Railroad</fullName>
            </value>
            <value>
                <fullName>Right of Way</fullName>
            </value>
            <value>
                <fullName>Sewer</fullName>
            </value>
            <value>
                <fullName>Traffic Control</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>