force-app/main/default/objects/Work_Authorization__c/fields/Update_to_Legal__c.field-meta.xml
<CustomField>
    <fullName>Update_to_Legal__c</fullName>
    <description>#44154 Checkbox to evaluate Locate records that should be picked up by the system to move from Pending Response to Legal Scheduled_Locate_from_Pending_Response_to_Legal</description>
    <formula>AND(
 RecordType.Name = &apos;Locate&apos;,
 TEXT( Status__c ) = &apos;Pending Response&apos;,
 Work_Begin_Date__c &lt;= TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update to Legal</label>
    <type>Checkbox</type>
</CustomField>