force-app/main/default/objects/Work_Authorization__c/fields/Updated_Locate__c.field-meta.xml
<CustomField>
    <fullName>Updated_Locate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>29277</description>
    <inlineHelpText>Check this box when the Locate was replaced with a new Locate ticket.</inlineHelpText>
    <label>Updated Locate</label>
    <type>Checkbox</type>
</CustomField>