force-app/main/default/objects/Work_Authorization__c/fields/WA_Type__c.field-meta.xml
<CustomField>
    <fullName>WA_Type__c</fullName>
    <description>45871 Mobile Display</description>
    <formula>IF(
TEXT( Type__c ) = &apos;Locate&apos;,&apos;Locate&apos;,
IF(
 AND(
  TEXT( Type__c ) &lt;&gt; &apos;Locate&apos;, TEXT( Type__c ) = &apos;Other&apos;),&quot;Permit: &quot;&amp; Other_Type__c ,

&quot;Permit: &quot;&amp; TEXT( Type__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the WA Type on Mobile</inlineHelpText>
    <label>WA Type</label>
    <type>Text</type>
</CustomField>