force-app/main/default/objects/Work_Authorization__c/fields/Work_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Begin_Date__c</fullName>
    <description>29277 Original field</description>
    <label>Work Begin Date</label>
    <type>Date</type>
</CustomField>