force-app/main/default/objects/Work_Authorization__c/recordTypes/Locate.recordType-meta.xml
<RecordType>
    <fullName>Locate</fullName>
    <active>true</active>
    <label>Locate</label>
</RecordType>