force-app/main/default/objects/Work_Authorization__c/recordTypes/Permit.recordType-meta.xml
<RecordType>
    <fullName>Permit</fullName>
    <active>true</active>
    <label>Permit</label>
</RecordType>