force-app/main/default/objects/Work_Authorization__c/validationRules/EXPIRATION_DATE_CONFLICT.validationRule-meta.xml
<ValidationRule>
    <fullName>EXPIRATION_DATE_CONFLICT</fullName>
    <active>true</active>
    <description>29277 The Expiration Date cannot be before the Request Date</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Locate&apos;,
Expiration_Date__c &lt;  Request_Date__c)</errorConditionFormula>
    <errorMessage>Work Authorization Expiration Date cannot be before the Request Date</errorMessage>
</ValidationRule>