force-app/main/default/objects/Work_Authorization__c/validationRules/ISBLANK_PRIMARY_ADDRESS.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_PRIMARY_ADDRESS</fullName>
    <active>true</active>
    <description>28042</description>
    <errorConditionFormula>ISBLANK( Primary_Address__c )</errorConditionFormula>
    <errorMessage>Work Authorizations required a Primary Address to be selected.</errorMessage>
</ValidationRule>