force-app/main/default/objects/Work_Authorization__c/validationRules/ISBLANK_SUB_PROJECT.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_SUB_PROJECT</fullName>
    <active>true</active>
    <description>28042</description>
    <errorConditionFormula>ISBLANK( Sub_Project__c  )</errorConditionFormula>
    <errorMessage>Work Authorizations required a Sub Project to be selected.</errorMessage>
</ValidationRule>