force-app/main/default/objects/Work_Authorization__c/validationRules/ISCHANGED_SUB_PROJECT.validationRule-meta.xml
<ValidationRule>
    <fullName>ISCHANGED_SUB_PROJECT</fullName>
    <active>true</active>
    <description>28042</description>
    <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;,ISCHANGED( Sub_Project__c  ))</errorConditionFormula>
    <errorMessage>Work Authorizations required a Sub Project to be selected.</errorMessage>
</ValidationRule>