force-app/main/default/objects/Work_Authorization__c/validationRules/LOCATE_WORK_BEGIN_DATE_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>LOCATE_WORK_BEGIN_DATE_REQUIRED</fullName>
    <active>true</active>
    <description>44154 The Work Begin Date is required when the status is not Canceled</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Locate&apos;,
TEXT( Status__c )&lt;&gt;&apos;Canceled&apos;,
ISBLANK( Work_Begin_Date__c ))</errorConditionFormula>
    <errorMessage>The Locate record Work Begin Date is required when the status is not Canceled</errorMessage>
</ValidationRule>