force-app/main/default/objects/Work_Authorization__c/validationRules/PERMIT_EXPIRATION_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>PERMIT_EXPIRATION_REQUIRED</fullName>
    <active>true</active>
    <description>28043 The Expiration Date cannot be blank</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Permit&apos;,TEXT( Status__c )=&apos;Approved&apos;,
ISBLANK( Expiration_Date__c))</errorConditionFormula>
    <errorMessage>Work Authorization Expiration Date cannot be blank if Approved</errorMessage>
</ValidationRule>