force-app/main/default/objects/Work_Authorization__c/validationRules/PERMIT_FEE_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>PERMIT_FEE_REQUIRED</fullName>
    <active>true</active>
    <description>30492 CANNOT BE BLANK. 5/31 MEETING</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Permit&apos;,TEXT( Status__c )=&apos;Approved&apos;,
ISBLANK(  Permit_Fee__c  ))</errorConditionFormula>
    <errorMessage>Work Authorization Permit Fees cannot be blank if Approved. Enter $0 if Not Applicable</errorMessage>
</ValidationRule>