force-app/main/default/objects/Work_Authorization__c/validationRules/PERMIT_IS_LOCATE_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>PERMIT_IS_LOCATE_REQUIRED</fullName>
    <active>true</active>
    <description>28043 The Is Locate Required value cannot be blank if Status is Approved or Pending Approval</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Permit&apos;,
ISBLANK(TEXT( Is_Locate_Required__c )),
OR(
 TEXT(Status__c )=&apos;Pending Approval&apos;,TEXT(Status__c )=&apos;Approved&apos;)
)</errorConditionFormula>
    <errorMessage>Work Authorization Is Locate Required value cannot be blank if Status is Approved or Pending Approval</errorMessage>
</ValidationRule>