force-app/main/default/objects/Work_Authorization__c/validationRules/PERMIT_ISSUE_AND_START_DATE_CONFLICT.validationRule-meta.xml
<ValidationRule>
    <fullName>PERMIT_ISSUE_AND_START_DATE_CONFLICT</fullName>
    <active>false</active>
    <description>28043 The Issue Date cannot be before the Start Date
46092 - Deactivating per this story</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Permit&apos;,TEXT( Status__c )=&apos;Approved&apos;,
Start_Date__c &lt; Issued_Date__c )</errorConditionFormula>
    <errorMessage>Work Authorization Issue Date cannot be after the Start Date</errorMessage>
</ValidationRule>