force-app/main/default/objects/Work_Authorization__c/validationRules/PERMIT_ISSUED_DATE_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>PERMIT_ISSUED_DATE_REQUIRED</fullName>
    <active>true</active>
    <description>28043 The Issued Date cannot be blank</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Permit&apos;,TEXT( Status__c )=&apos;Approved&apos;,
ISBLANK(  Issued_Date__c ))</errorConditionFormula>
    <errorMessage>Work Authorization Issue Date cannot be blank if Approved</errorMessage>
</ValidationRule>