force-app/main/default/objects/Work_Authorization__c/validationRules/PERMIT_OTHER_TYPE_DESCRIPTION.validationRule-meta.xml
<ValidationRule>
    <fullName>PERMIT_OTHER_TYPE_DESCRIPTION</fullName>
    <active>true</active>
    <description>28043 The Other Type text field is required when the Permit Type is Other</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;Permit&apos;,
TEXT( Type__c ) = &apos;Other&apos;,
ISBLANK(  Other_Type__c ))</errorConditionFormula>
    <errorDisplayField>Other_Type__c</errorDisplayField>
    <errorMessage>Work Authorization Other Type text field is required when the Permit Type is Other</errorMessage>
</ValidationRule>