force-app/main/default/objects/Work_Authorization__c/validationRules/PERMIT_START_AND_END_DATE_CONFLICT.validationRule-meta.xml
<ValidationRule>
    <fullName>PERMIT_START_AND_END_DATE_CONFLICT</fullName>
    <active>false</active>
    <description>28043 The Start Date cannot be before the End Date
46092 - deactivating per this story</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Permit&apos;,
Start_Date__c &gt; End_Date__c)</errorConditionFormula>
    <errorMessage>Work Authorization End Date cannot be before the Start Date</errorMessage>
</ValidationRule>