force-app/main/default/objects/Work_Authorization__c/validationRules/PERMIT_START_AND_EXP_DATE_CONFLICT.validationRule-meta.xml
<ValidationRule>
    <fullName>PERMIT_START_AND_EXP_DATE_CONFLICT</fullName>
    <active>false</active>
    <description>28043 The Expiration Date cannot be before the Start Date
46092 - Deactivating per this ADO story</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Permit&apos;,TEXT( Status__c )=&apos;Approved&apos;,
Start_Date__c &gt;   Expiration_Date__c)</errorConditionFormula>
    <errorMessage>Work Authorization Expiration Date cannot be before the Start Date</errorMessage>
</ValidationRule>