force-app/main/default/objects/Work_Authorization__c/listViews/Expiring_Locates.listView-meta.xml
<ListView>
    <fullName>Expiring_Locates</fullName>
    <columns>NAME</columns>
    <columns>Formatted_Address__c</columns>
    <columns>Status__c</columns>
    <columns>Expiration_Indicator__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Work_Begin_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Ticket_Number__c</columns>
    <columns>Sub_Project__c</columns>
    <columns>Sub_Project_Status__c</columns>
    <columns>Link_to_Locate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </filters>
    <filters>
        <field>Updated_Locate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sub_Project_Status__c</field>
        <operation>notContain</operation>
        <value>Canceled</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Authorization__c.Locate</value>
    </filters>
    <filters>
        <field>Sub_Project_Status__c</field>
        <operation>notContain</operation>
        <value>Closed</value>
    </filters>
    <label>Expiring Locates</label>
</ListView>