force-app/main/default/objects/Work_Authorization__c/listViews/Locates_Canceled.listView-meta.xml
<ListView>
    <fullName>Locates_Canceled</fullName>
    <columns>NAME</columns>
    <columns>Formatted_Address__c</columns>
    <columns>Status__c</columns>
    <columns>Expiration_Indicator__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Work_Begin_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Ticket_Number__c</columns>
    <columns>Sub_Project__c</columns>
    <columns>Sub_Project_Status__c</columns>
    <columns>Link_to_Locate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Authorization__c.Locate</value>
    </filters>
    <label>Locates-Canceled</label>
</ListView>