force-app/main/default/objects/Work_Authorization__c/listViews/Permits_NPL_Review.listView-meta.xml
<ListView>
    <fullName>Permits_NPL_Review</fullName>
    <columns>NAME</columns>
    <columns>Formatted_Address__c</columns>
    <columns>Status__c</columns>
    <columns>Authority_Having_Jurisdiction__c</columns>
    <columns>Type__c</columns>
    <columns>Expiration_Indicator__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Issued_Date__c</columns>
    <columns>Permit_Number__c</columns>
    <columns>Reference_Number__c</columns>
    <columns>Sub_Project__c</columns>
    <columns>Sub_Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Internal Review</value>
    </filters>
    <filters>
        <field>Sub_Project_Status__c</field>
        <operation>notContain</operation>
        <value>Canceled</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Authorization__c.Permit</value>
    </filters>
    <filters>
        <field>Sub_Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Permits-Internal Review</label>
</ListView>